# Cryptax

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
api/: .dockerignore  Dockerfile  README.md  config.py  database.py  logging_config.py  main.py  models.py  pydantic_models.py  requirements.txt  rq_service.py
api/routes/: health.py  jobs.py
api/services/: __init__.py  job_service.py
api/tests/: conftest.py  test_health.py  test_job_ordering.py  test_job_secrets.py  test_jobs.py  test_robustness.py  test_robustness_extended.py
database/: documents_table.sql  job_events_table.sql  jobs_table.sql
scratch/: test_ccxt_price.py  test_dali_import.py  test_tx_update.py
worker/: Dockerfile  README.md  __init__.py  config.py  db.py  docker-entrypoint.sh  logging_config.py  main.py  models.py  requirements.txt
worker/services/: __init__.py  dali_service.py  email_service.py  job_processor.py  job_service.py  rp2_service.py
worker/tests/: test_dali_enrichment.py  test_dali_service.py  test_job_processor.py
